# playground-wstd

./: Cargo.toml  run.sh
src/: bindings.rs  lib.rs  main.rs  schema.rs
wit/: world.wit
