[package]
name = "playground-wstd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
wit-bindgen-rt = { version = "0.28.0", features = ["bitflags"] }
wstd = { path = "../wstd" }

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:playground-wstd"

[package.metadata.component.dependencies]
